// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleDetailsGroup renders 1`] = `
<div
  className="rule-details-group"
>
  <RuleDetails
    rule={
      Object {
        "id": "1",
      }
    }
  />
  <RuleDetails
    rule={
      Object {
        "id": "2",
      }
    }
  />
  <RuleDetails
    rule={
      Object {
        "id": "3",
      }
    }
  />
</div>
`;

exports[`RuleDetailsGroup renders, no de 1`] = `
<div
  className="rule-details-group"
>
  <React.Fragment>
    <RuleDetails
      rule={
        Object {
          "id": "1",
        }
      }
    />
  </React.Fragment>
  <React.Fragment>
    <RuleDetails
      rule={
        Object {
          "id": "2",
        }
      }
    />
  </React.Fragment>
  <React.Fragment>
    <RuleDetails
      rule={
        Object {
          "id": "3",
        }
      }
    />
  </React.Fragment>
</div>
`;

exports[`RuleDetailsGroup renders, no details 1`] = `
<div
  className="rule-details-group"
>
  <React.Fragment>
    <RuleDetails
      rule={
        Object {
          "id": "1",
        }
      }
    />
  </React.Fragment>
  <React.Fragment>
    <RuleDetails
      rule={
        Object {
          "id": "2",
        }
      }
    />
  </React.Fragment>
  <React.Fragment>
    <RuleDetails
      rule={
        Object {
          "id": "3",
        }
      }
    />
  </React.Fragment>
</div>
`;

exports[`RuleDetailsGroup renders, with details 1`] = `
<div
  className="rule-details-group"
>
  <React.Fragment>
    <RuleDetails
      rule={
        Object {
          "id": "1",
          "nodes": Array [
            Object {
              "failureSummary": "fix the error on html tag",
              "html": "<html>",
              "snippet": "<html>",
            },
          ],
        }
      }
    >
      <InstanceDetailsGroup
        nodeResults={
          Array [
            Object {
              "failureSummary": "fix the error on html tag",
              "html": "<html>",
              "snippet": "<html>",
            },
          ]
        }
      />
    </RuleDetails>
  </React.Fragment>
</div>
`;
